--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/images/logo/logo-v.jpeg">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
     <title>Violeta - Vinos boutique</title>
 </head>
@@ -15,32 +16,38 @@
             <div id="header__completo">
                 <h3><a href="index.html"><img id="header__logo" src="assets/images/logo/logo-chico.png" alt="Imagen no disponible"></a></h3>
                 <div class="header__buttons">
-                    <form action="" method="get" enctype="multipart/form-data">
-                        <input class="texto" type="text" name="buscar" id="buscar" placeholder="Buscar...">
-                    </form>
                     <img class="header__item" src="assets/images/login-logo.png" alt="">
                     <img class="header__item" src="assets/images/carrito-logo.png" alt="">
                 </div>
             </div>
-            <nav>
-                <ul id="menubar">
-                    <li><a href="index.html" class="menubar__link">Inicio</a></li>
-                    <li><a href="pages/club.html" class="menubar__link">Club de vinos</a></li>
-                    <li><a href="pages/catas.html" class="menubar__link">Eventos</a></li>
-                    <li><a href="pages/tienda.html" class="menubar__link">Tienda</a></li>
-                    <li><a href="pages/contacto.html" class="menubar__link">Contacto</a></li>
-                </ul>
-                <div id="menuMobile">
-                    <!--<ul>
-                        <li>Inicio</li>
-                        <li>Club</li>
-                        <li>Catas</li>
-                        <li>Tienda</li>
-                        <li>Contacto</li>
-                    </ul>-->
-                    <form action="" method="get" enctype="multipart/form-data">
-                        <input class="texto" type="text" name="buscarMobile" id="buscar" placeholder="Buscar...">
-                    </form>
+            <nav class="navbar navbar-expand-lg bg-light">
+                <div class="container-fluid" id="menubar">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link menubar__link" aria-current="page" href="index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link menubar__link" aria-current="page" href="pages/club.html">Club de vinos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link menubar__link" href="pages/catas.html">Eventos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link menubar__link" aria-current="page" href="pages/tienda.html">Tienda</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link menubar__link" href="pages/contacto.html">Contacto</a>
+                            </li>
+                        </ul>
+                        <form class="d-flex" role="search">
+                            <input class="form-control me-2 texto" type="search" placeholder="Buscar..." aria-label="Search">
+                            <button class="btn btn-outline-success boton-buscar" type="submit">Search</button>
+                        </form>
+                    </div>
                 </div>
             </nav>
         </header>
@@ -74,21 +81,16 @@
         </section>
         <section>
             <article>
-                <h3>Próximos eventos</h3>
                 <div id="proximosEventos">
                     <table id="eventos" cellspacing="5" cellpadding="5">
-                        <!--<th></th>
-                        <th>Fecha</th>
-                        <th>Lugar</th>
-                        <th>Descripción del evento</th>
-                        <th></th>-->
-                        <tr>
+                        <th colspan="4"><h3>Próximos eventos</h3></th>
+                        <tr class="eventos__row">
                             <td class="eventos__fecha">10 JUL</td>
                             <td class="eventos__descripcion">Cheese & Wine</td>
                             <td class="eventos__ubicacion">Ver evento - Link a flyer del evento</td>
                             <td><a href = "mailto: violetavinos@gmail.com?subject = Reservar cupo&body = ¡Hola! Quiero reservar un cupo para el evento...">¡Reservá tu lugar!</a></td>
                         </tr>
-                        <tr>
+                        <tr class="eventos__row">
                             <td class="eventos__fecha">06 AGO</td>
                             <td class="eventos__descripcion">Cata en casa</td>
                             <td class="eventos__ubicacion" >Ver evento - Link a flyer del evento</td>
@@ -96,6 +98,7 @@
                         </tr>
                     </table>
                     <table id="eventos__small">
+                        <th colspan="2"><h3>Próximos eventos</h3></th>
                         <tr>
                             <td class="eventos__fecha">10 JUL</td>
                             <td class="eventos__descripcion">Cheese & Wine</td>
@@ -110,33 +113,38 @@
         </section>
         <!--pie de pagina-->
         <footer>
-            <div class="footer__contenido">
-                <h4>Datos de contacto</h4>
-                <table>
-                    <tr><td>11 1234 5678</td></tr>
-                    <tr><td>violeta_vinos@gmail.com</td></tr>
-                    <tr><td>Canning, Buenos Aires</td></tr>
-                </table>
-            </div>
-            <div class="footer__contenido">
-                <h4>Redes sociales</h4>
-                <div class="footer__contenido__redes">
-                    <a href="https://www.instagram.com/violeta.vinos/?hl=es" target="_blank"><img class="footer__item" src="assets/images/instagram-logo.png"></a>
-                    <a href="https://m.facebook.com/violeta.vinos/?ref=bookmarks" target="_blank"><img class="footer__item" src="assets/images/facebook-logo.png"></a>
-                    <a href="https://www.youtube.com/watch?v=VSIMmQfeHZI"><img class="footer__item" src="assets/images/youtube-logo.png"></a>
+            <div class="container">
+                <div class="row">
+                    <div class="footer__contenido footer__contenido__datos col-sm-12 col-md-4 col-xl-4">
+                        <h4>Datos de contacto</h4>
+                        <table>
+                            <tr><td>11 1234 5678</td></tr>
+                            <tr><td>violeta_vinos@gmail.com</td></tr>
+                            <tr><td>Canning, Buenos Aires</td></tr>
+                        </table>
+                    </div>
+                    <div class="footer__contenido col-sm-12 col-md-4 col-xl-4">
+                        <h4>Redes sociales</h4>
+                        <div class="footer__contenido__redes">
+                            <a href="https://www.instagram.com/violeta.vinos/?hl=es" target="_blank"><img class="footer__item" src="assets/images/instagram-logo.png"></a>
+                            <a href="https://m.facebook.com/violeta.vinos/?ref=bookmarks" target="_blank"><img class="footer__item" src="assets/images/facebook-logo.png"></a>
+                            <a href="https://www.youtube.com/watch?v=VSIMmQfeHZI"><img class="footer__item" src="assets/images/youtube-logo.png"></a>
+                        </div>
+                    </div>
+                    <div class="footer__contenido footer__contenido__news col-sm-12 col-md-4 col-xl-4">
+                        <h4>Suscripción Newsletter</h4>
+                        <form action="" method="post" enctype="multipart/form-data">
+                            <label id="footer__emailLabel" for="email_susc">Suscríbete para recibir nuestras novedades:</label>
+                            <br>
+                            <input class="texto" type="email" name="email_susc">
+                            <input class="boton-envio" type="submit" name="suscribir" value="Suscribirme">
+                        </form>
+                    </div>
                 </div>
-            </div>
-            <div class="footer__contenido">
-                <h4>Suscripción Newsletter</h4>
-                <form action="" method="post" enctype="multipart/form-data">
-                    <label for="email_susc">Suscríbete para recibir nuestras novedades:</label>
-                    <br>
-                    <input class="texto" type="email" name="email_susc">
-                    <input class="boton-envio" type="submit" name="suscribir" value="Suscribirme">
-                </form>
             </div>
         </footer>
         <!--cierre de pie de pagina-->
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
