--- a/pages/catas.html
+++ b/pages/catas.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../assets/images/logo/logo-v.jpeg">
-    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/animate-wow/animate.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Violeta - Vinos boutique</title>
     <script src="animate-wow/wow.min.js"></script>
     <script>
@@ -17,34 +18,40 @@
     <!---logo y menu-->
     <header>
         <div id="header__completo">
-            <h3><a href="index.html"><img id="header__logo" src="../assets/images/logo/logo-chico.png" alt="Imagen no disponible"></a></h3>
+            <h3><a href="../index.html"><img id="header__logo" src="../assets/images/logo/logo-chico.png" alt="Imagen no disponible"></a></h3>
             <div class="header__buttons">
-                <form action="" method="get" enctype="multipart/form-data">
-                    <input class="texto" type="text" name="buscar" id="buscar" placeholder="Buscar...">
-                </form>
                 <img class="header__item" src="../assets/images/login-logo.png" alt="">
                 <img class="header__item" src="../assets/images/carrito-logo.png" alt="">
             </div>
         </div>
-        <nav>
-            <ul id="menubar">
-                <li><a href="../index.html" class="menubar__link">Inicio</a></li>
-                <li><a href="club.html" class="menubar__link">Club de vinos</a></li>
-                <li><a href="catas.html" class="menubar__link">Eventos</a></li>
-                <li><a href="tienda.html" class="menubar__link">Tienda</a></li>
-                <li><a href="contacto.html" class="menubar__link">Contacto</a></li>
-            </ul>
-            <div id="menuMobile">
-                <!--<ul>
-                    <li>Inicio</li>
-                    <li>Club</li>
-                    <li>Catas</li>
-                    <li>Tienda</li>
-                    <li>Contacto</li>
-                </ul>-->
-                <form action="" method="get" enctype="multipart/form-data">
-                    <input class="texto" type="text" name="buscarMobile" id="buscar" placeholder="Buscar...">
-                </form>
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid" id="menubar">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link menubar__link" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link menubar__link" aria-current="page" href="club.html">Club de vinos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link menubar__link" href="catas.html">Eventos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link menubar__link" aria-current="page" href="tienda.html">Tienda</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link menubar__link" href="contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2 texto" type="search" placeholder="Buscar..." aria-label="Search">
+                        <button class="btn btn-outline-success boton-buscar" type="submit">Search</button>
+                    </form>
+                </div>
             </div>
         </nav>
     </header>
@@ -58,35 +65,176 @@
         <article>
             <img class="evento__imgEvento wow animate__animated animate__fadeInUp" src="../assets/images/eventos-invitacion.jpeg" alt="Imagen no disponible">
         </article>
+        <article>
+            <!--Carrousel de imágenes-->
+            <div id="carrousel__small">
+                <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="../assets/images/carrousel-1.png" class="d-block w-100" alt="Imagen no disponible">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../assets/images/carrousel-2.png" class="d-block w-100" alt="Imagen no disponible">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../assets/images/carrousel-3.png" class="d-block w-100" alt="Imagen no disponible">
+                        </div>
+                        <div class="carousel-item active">
+                            <img src="../assets/images/carrousel-4.png" class="d-block w-100" alt="Imagen no disponible">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../assets/images/carrousel-5.png" class="d-block w-100" alt="Imagen no disponible">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../assets/images/carrousel-6.png" class="d-block w-100" alt="Imagen no disponible">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+              <!--Fin Carrousel-->
+            <div class="container" id="carrousel__large">
+                <div class="row">
+                    <div class="col-sm-4 col-md-2 col-xl-2">
+                        <img class="carrousel__imagen" data-bs-toggle="modal" data-bs-target="#exampleModal" src="../assets/images/carrousel-1.png" alt="">
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">VIOLETA VINOS</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <img class="carrousel__imagen-lg" src="../assets/images/carrousel-1.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 col-md-2 col-xl-2">
+                        <img class="carrousel__imagen" data-bs-toggle="modal" data-bs-target="#exampleModal" src="../assets/images/carrousel-2.png" alt="">
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">VIOLETA VINOS</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <img class="carrousel__imagen-lg" src="../assets/images/carrousel-2.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 col-md-2 col-xl-2">
+                        <img class="carrousel__imagen" data-bs-toggle="modal" data-bs-target="#exampleModal" src="../assets/images/carrousel-3.png" alt="">
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">VIOLETA VINOS</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <img class="carrousel__imagen-lg" src="../assets/images/carrousel-3.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 col-md-2 col-xl-2">
+                        <img class="carrousel__imagen" data-bs-toggle="modal" data-bs-target="#exampleModal" src="../assets/images/carrousel-4.png" alt="">
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">VIOLETA VINOS</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <img class="carrousel__imagen-lg" src="../assets/images/carrousel-4.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 col-md-2 col-xl-2">
+                        <img class="carrousel__imagen" data-bs-toggle="modal" data-bs-target="#exampleModal" src="../assets/images/carrousel-5.png" alt="">
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">VIOLETA VINOS</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <img class="carrousel__imagen-lg" src="../assets/images/carrousel-5.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 col-md-2 col-xl-2">
+                        <img class="carrousel__imagen" data-bs-toggle="modal" data-bs-target="#exampleModal" src="../assets/images/carrousel-6.png" alt="">
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">VIOLETA VINOS</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <img class="carrousel__imagen-lg" src="../assets/images/carrousel-6.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </article>
     </section>
     <!--pie de pagina-->
     <footer>
-        <div class="footer__contenido">
-            <h4>Datos de contacto</h4>
-            <table>
-                <tr><td>11 1234 5678</td></tr>
-                <tr><td>violeta_vinos@gmail.com</td></tr>
-                <tr><td>Canning, Buenos Aires</td></tr>
-            </table>
-        </div>
-        <div class="footer__contenido">
-            <h4>Redes sociales</h4>
-            <div class="footer__contenido__redes">
-                <a href="https://www.instagram.com/violeta.vinos/?hl=es" target="_blank"><img class="footer__item" src="../assets/images/instagram-logo.png"></a>
-                <a href="https://m.facebook.com/violeta.vinos/?ref=bookmarks" target="_blank"><img class="footer__item" src="../assets/images/facebook-logo.png"></a>
-                <a href="https://www.youtube.com/watch?v=VSIMmQfeHZI"><img class="footer__item" src="../assets/images/youtube-logo.png"></a>
+        <div class="container">
+            <div class="row">
+                <div class="footer__contenido footer__contenido__datos col-sm-12 col-md-4 col-xl-4">
+                    <h4>Datos de contacto</h4>
+                    <table>
+                        <tr><td>11 1234 5678</td></tr>
+                        <tr><td>violeta_vinos@gmail.com</td></tr>
+                        <tr><td>Canning, Buenos Aires</td></tr>
+                    </table>
+                </div>
+                <div class="footer__contenido col-sm-12 col-md-4 col-xl-4">
+                    <h4>Redes sociales</h4>
+                    <div class="footer__contenido__redes">
+                        <a href="https://www.instagram.com/violeta.vinos/?hl=es" target="_blank"><img class="footer__item" src="../assets/images/instagram-logo.png"></a>
+                        <a href="https://m.facebook.com/violeta.vinos/?ref=bookmarks" target="_blank"><img class="footer__item" src="../assets/images/facebook-logo.png"></a>
+                        <a href="https://www.youtube.com/watch?v=VSIMmQfeHZI"><img class="footer__item" src="../assets/images/youtube-logo.png"></a>
+                    </div>
+                </div>
+                <div class="footer__contenido footer__contenido__news col-sm-12 col-md-4 col-xl-4">
+                    <h4>Suscripción Newsletter</h4>
+                    <form action="" method="post" enctype="multipart/form-data">
+                        <label id="footer__emailLabel" for="email_susc">Suscríbete para recibir nuestras novedades:</label>
+                        <br>
+                        <input class="texto" type="email" name="email_susc">
+                        <input class="boton-envio" type="submit" name="suscribir" value="Suscribirme">
+                    </form>
+                </div>
             </div>
-        </div>
-        <div class="footer__contenido">
-            <h4>Suscripción Newsletter</h4>
-            <form action="" method="post" enctype="multipart/form-data">
-                <label for="email_susc">Suscríbete para recibir nuestras novedades:</label>
-                <br>
-                <input class="texto" type="email" name="email_susc">
-                <input class="boton-envio" type="submit" name="suscribir" value="Suscribirme">
-            </form>
         </div>
     </footer>
     <!--cierre de pie de pagina-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
